<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/intro_one_blur"
    tools:context="com.example.user.mahindraapp.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/member"
            android:textSize="25sp"
            android:drawablePadding="30dp"
            android:drawableLeft="@drawable/back_arrow"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/register"
            android:textSize="25sp"
            android:textColor="@color/colorSaffron"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        >

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:hint="@string/member_id_email"
            android:padding="10dp"
            android:inputType="text"
            android:gravity="top|left"
            android:drawableLeft="@drawable/referral_name"
            android:textAlignment="center" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="top|left"
            android:background="@drawable/border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:id="@+id/loginPasswordId"
            android:padding="10dp"
            android:drawableLeft="@drawable/password"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:padding="15dp"
            android:id="@+id/loginButtonId"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_shape"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/can_t_login"
            android:textSize="20sp"
            android:id="@+id/tv_cantlogin"
            android:textColor="@color/blueButtonBackground"
            />

    </LinearLayout>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:text="@string/or_login_with"
    android:id="@+id/tv_alternatelogin"
    android:textColor="@color/greytextforlogin"
    android:textStyle="bold"
    />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:background="@drawable/button_backgrounds"
    android:text="@string/googleplus"
    android:id="@+id/tv_googleplus"
    android:gravity="center"
    android:textColor="@color/blueButtonBackground"
    android:layout_marginRight="10dp"
    />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_backgrounds"
            android:textColor="@color/blueButtonBackground"
            android:text="Facebook"
            android:gravity="center"
            android:layout_toLeftOf="@+id/tv_googleplus"
            android:layout_toStartOf="@+id/tv_googleplus" />
    </RelativeLayout>
</LinearLayout>
