<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.user.mahindraapp.ResortListActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blueButtonBackground"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beach"
        android:id="@+id/tv_Back"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:drawablePadding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:drawableLeft="@drawable/back_arrow"
        android:drawableStart="@drawable/back_arrow"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/datas"
        android:textSize="20sp"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/adult_home"
        android:textColor="@color/white"
        />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resort_s_in_beach"
            android:textSize="15sp"
            android:textColor="@color/greycolor"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/tv_results"
            android:textColor="@color/greycolor"
            />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/greycolor"
        android:scrollbars="vertical"
        android:id="@+id/recycler_view"
        android:layout_weight="9"/>
</LinearLayout>
