<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user.mahindraapp.Fragments.AboutFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/headingAbout"
                android:text="@string/about_resort"
                android:freezesText="true"
                android:textColor="@color/blackcolor"
                android:textSize="25sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_AboutTheHotel"
                android:freezesText="true"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewWifi"
                    android:layout_marginLeft="10dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:freezesText="true"
                android:text="@string/address"
                android:id="@+id/headingAddress"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:freezesText="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tv_adressofdata"
                android:textColor="@color/blackcolor"
                android:drawableRight="@drawable/address"
                android:drawableEnd="@drawable/address"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/darkgrey"
                >
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:freezesText="true"
                android:text="@string/email"
                android:layout_marginBottom="10dp"
                android:id="@+id/headingEmail"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:freezesText="true"
                android:textColor="@color/blackcolor"
                android:id="@+id/tv_emailofdata"
                android:drawableRight="@drawable/email_red"
                android:drawableEnd="@drawable/email_red"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/darkgrey"
                >
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/phone"
                android:layout_marginBottom="10dp"
                android:freezesText="true"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/headingPhone"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:freezesText="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/blackcolor"
                android:id="@+id/tv_Phoneofdata"
                android:drawableRight="@drawable/phone"
                android:drawableEnd="@drawable/phone"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/darkgrey"
                android:layout_marginBottom="20dp"
                >
            </View>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_booking"
                    android:layout_alignParentBottom="true"
                    android:freezesText="true"
                    android:padding="15dp"
                    android:id="@+id/loginButtonId"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/button_shape"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginBottom="10dp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
